--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MarcelloSharraiLanding Page</title>
+  <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css' rel='stylesheet'
+    integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD' crossorigin='anonymous'>
+  <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
+  <header>
 
+  </header>
+  <main class="container-fluid">
+    <section class="row " style="background-color: rgba(20, 20, 21, 0.954); height: 85dvh;">
+
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
+<script src="app.js"></script>
 
 </html>
