--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
   <header>
 
   </header>
-  <main class="container-fluid">
-    <section class="row " style="background-color: rgba(20, 20, 21, 0.954); height: 85dvh;">
+  <main class="container-fluid ">
+    <section class="row px-5 pt-5" style="background-color: rgba(20, 20, 21, 0.954); height: 85dvh;">
+      <div class="col-12 mx-5 pt-5">
+        <section class="row ">
+          <div class="col-12">
+            <p class="text-light fs-2 mt-3">Marcello Sharrai</p>
+          </div>
+          <div class="col-12">
+            <h1 class="text-light fw-bolder ms-2 ">Software Developer</h1>
+          </div>
 
+        </section>
+      </div>
     </section>
   </main>
   <footer>
