--- a/index.html
+++ b/index.html
@@ -17,17 +17,43 @@
 
   </header>
   <main class="container-fluid ">
-    <section class="row px-5 pt-5" style="background-color: rgba(20, 20, 21, 0.954); height: 85dvh;">
+    <section class="row px-5 pt-5" style="background-color: #72a0c1; height: 85dvh;">
       <div class="col-12 mx-5 pt-5">
-        <section class="row ">
-          <div class="col-12">
-            <p class="text-light fs-2 mt-3">Marcello Sharrai</p>
+        <section class="row">
+          <div class="col-6 ">
+
+            <section class="row ">
+              <div class="col-12">
+                <p class=" fs-2 mt-3 main-txt">Marcello Sharrai</p>
+              </div>
+              <div class="col-12">
+                <h1 class=" fw-bolder ms-2 main-txt">Software Developer</h1>
+              </div>
+              <div class="col-12">
+                <div class="d-flex justify-content-around">
+                  <p class="fs-4 main-txt" style="text-align: justify; word-wrap: break-word;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad vel dicta sint similique quisquam!
+                    Saepe,
+                    aut
+                    labore omnis, voluptatem eos illum ad aliquam corrupti molestiae eius sit velit eaque earum.
+                  </p>
+                </div>
+              </div>
+
+            </section>
           </div>
-          <div class="col-12">
-            <h1 class="text-light fw-bolder ms-2 ">Software Developer</h1>
+          <div class="col-6 text-center ">
+            <img class="rounded ms-2"
+              src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2F0fGVufDB8fDB8fHww"
+              alt="cat">
           </div>
 
         </section>
+      </div>
+    </section>
+    <section class="row mx-5 pt-5" style="background-color: #dcdcdc;">
+      <div class="col-12 mx-5 pt-5">
+
       </div>
     </section>
   </main>
