--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MarcelloSharraiLanding Page</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&family=Nanum+Gothic+Coding&display=swap"
+    rel="stylesheet">
   <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css' rel='stylesheet'
     integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD' crossorigin='anonymous'>
   <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="style.css">
+
 
 </head>
 
@@ -17,17 +22,20 @@
 
   </header>
   <main class="container-fluid ">
-    <section class="row px-5 pt-5" style="background-color: #72a0c1; height: 85dvh;">
-      <div class="col-12 mx-5 pt-5">
+    <section class="row px-5 pt-3 " style="background-color: #72a0c1; height: 65dvh;">
+      <div class="col-12 px-5 pt-3">
         <section class="row">
-          <div class="col-6 ">
+          <div class="col-12 col-md-6">
 
             <section class="row ">
               <div class="col-12">
-                <p class=" fs-2 mt-3 main-txt">Marcello Sharrai</p>
+                <p class=" fs-2 mt-3 ">Marcello Sharrai</p>
               </div>
               <div class="col-12">
-                <h1 class=" fw-bolder ms-2 main-txt">Software Developer</h1>
+                <p class=" fw-bold mb-0" style="font-family: 'Darker Grotesque', sans-serif; font-size: 3.5rem;">
+                  Software
+                  Developer
+                </p>
               </div>
               <div class="col-12">
                 <div class="d-flex justify-content-around">
@@ -42,7 +50,7 @@
 
             </section>
           </div>
-          <div class="col-6 text-center ">
+          <div class="col-12 col-md-6 text-center ">
             <img class="rounded ms-2"
               src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2F0fGVufDB8fDB8fHww"
               alt="cat">
@@ -51,9 +59,32 @@
         </section>
       </div>
     </section>
-    <section class="row mx-5 pt-5" style="background-color: #dcdcdc;">
-      <div class="col-12 mx-5 pt-5">
+    <section class="row px-5 pt-3" style="background-color: #dcdcdc;">
+      <div class="col-12 px-5 ">
+        <section class="row">
+          <!-- SECTION about me -->
+          <div class="col-12">
+            <p class="fs-2 heading-txt ">About Me</p>
+          </div>
+          <!-- !SECTION -->
+          <!-- SECTION skills -->
+          <div class="col-12 px-5">
+            <section class="row">
+              <div class="col-12"></div>
+            </section>
+          </div>
+          <!-- !SECTION -->
+          <!-- SECTION projects -->
+          <div class="col-12 px-5">
 
+          </div>
+          <!-- !SECTION -->
+          <!-- SECTION Contact me -->
+          <div class="col-12 px-5">
+
+          </div>
+          <!-- !SECTION -->
+        </section>
       </div>
     </section>
   </main>
