--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
           <div class="col-12 col-md-6">
 
             <section class="row ">
-              <div class="col-12">
-                <p class=" fs-2 mt-3 ">Marcello Sharrai</p>
-              </div>
-              <div class="col-12">
-                <p class=" fw-bold mb-0" style="font-family: 'Darker Grotesque', sans-serif; font-size: 3.5rem;">
+              <div class="col-12 border-bottom border-dark border-3">
+                <p class=" fw-bold mb-0 " style="font-family: 'Darker Grotesque', sans-serif; font-size: 3.5rem;">
                   Software
                   Developer
                 </p>
+                <p class=" fs-2 mb-0">Marcello Sharrai</p>
               </div>
-              <div class="col-12">
+              <!-- <div class="col-12 ">
+              </div> -->
+              <div class="col-12 mt-3">
                 <div class="d-flex justify-content-around">
                   <p class="fs-4 main-txt" style="text-align: justify; word-wrap: break-word;">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad vel dicta sint similique quisquam!
