--- a/index.html
+++ b/index.html
@@ -22,65 +22,91 @@
 
   </header>
   <main class="container-fluid ">
-    <section class="row px-5 pt-3 " style="background-color: #72a0c1; height: 65dvh;">
+    <section class="row px-5 pt-3 main-bg">
       <div class="col-12 px-5 pt-3">
-        <section class="row">
-          <div class="col-12 col-md-6">
+        <section class="row justify-content-center">
+          <div class="col-12">
 
-            <section class="row ">
-              <div class="col-12 border-bottom border-dark border-3">
-                <p class=" fw-bold mb-0 " style="font-family: 'Darker Grotesque', sans-serif; font-size: 3.5rem;">
-                  Software
-                  Developer
+            <div class=" border-bottom border-light border-3 text-center">
+              <p class="heading-txt fw-bold mb-0 text-light " style="font-size: 4.5rem;">
+                Software
+                Developer
+              </p>
+              <p class=" fs-2 mb-0 text-light mb-3">Marcello Sharrai</p>
+
+            </div>
+
+            <!-- <div class="col-12 mt-3">
+              <div class="d-flex justify-content-around">
+                <p class="fs-4 main-txt" style="text-align: justify; word-wrap: break-word;">
+                  
                 </p>
-                <p class=" fs-2 mb-0">Marcello Sharrai</p>
-              </div>
-              <!-- <div class="col-12 ">
               </div> -->
-              <div class="col-12 mt-3">
-                <div class="d-flex justify-content-around">
-                  <p class="fs-4 main-txt" style="text-align: justify; word-wrap: break-word;">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad vel dicta sint similique quisquam!
-                    Saepe,
-                    aut
-                    labore omnis, voluptatem eos illum ad aliquam corrupti molestiae eius sit velit eaque earum.
-                  </p>
-                </div>
-              </div>
-
-            </section>
           </div>
-          <div class="col-12 col-md-6 text-center ">
-            <img class="rounded ms-2"
-              src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2F0fGVufDB8fDB8fHww"
-              alt="cat">
+          <div class="col-11 ">
+            <section class="row justify-content-center my-3">
+              <div class="col-5 rounded p-1" style="background-color: #dfd4fe3a;">
+
+              </div>
+              <div class="col-1 text-center">
+                <div class="text-light">
+                  <i class="mdi mdi-github fs-1"></i>
+                  <i class="mdi mdi-linkedin fs-1"></i>
+                  <i class="mdi mdi-email fs-1"></i>
+                </div>
+
+              </div>
+              <div class="col-5 rounded text-light p-1" style="background-color:  #dfd4fe3a;">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, saepe omnis. Soluta, perspiciatis
+                reiciendis similique id voluptatem rem eaque reprehenderit dolorum! Nesciunt mollitia pariatur esse
+                quaerat debitis, similique inventore natus repudiandae nihil ipsum dolorem hic exercitationem
+                dignissimos ratione tempore. Eligendi sapiente quibusdam magnam sit quaerat, suscipit accusamus repellat
+                tempora eveniet.
+              </div>
+            </section>
           </div>
 
         </section>
       </div>
+      <!-- <div class="col-12 col-md-6 text-center ">
+        <img class="rounded ms-2"
+          src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2F0fGVufDB8fDB8fHww"
+          alt="cat">
+      </div> -->
+
     </section>
     <section class="row px-5 pt-3" style="background-color: #dcdcdc;">
       <div class="col-12 px-5 ">
-        <section class="row">
-          <!-- SECTION about me -->
-          <div class="col-12">
-            <p class="fs-2 heading-txt ">About Me</p>
-          </div>
-          <!-- !SECTION -->
+        <section class="row justify-content-around">
           <!-- SECTION skills -->
-          <div class="col-12 px-5">
-            <section class="row">
-              <div class="col-12"></div>
+          <div class="col-11 ">
+            <section class="row justify-content-center">
+              <div class="col-12">
+                <p class="fs-1 heading-txt">Skills & Experience</p>
+              </div>
+              <div class="col-5 rounded" style="background-color: #c2c2c2;">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum totam architecto sequi porro corporis,
+                sit incidunt fugit necessitatibus id eum commodi quidem, molestias, unde voluptatem magni suscipit autem
+                placeat reprehenderit!
+              </div>
+              <div class="col-1">
+
+              </div>
+              <div class="col-5 rounded" style="background-color: #c2c2c2;">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, unde accusantium quo dolorem
+                aspernatur ullam quidem earum excepturi eius rerum tempora, molestias expedita, non eaque. Quos
+                reiciendis tempora vitae qui?
+              </div>
             </section>
           </div>
           <!-- !SECTION -->
           <!-- SECTION projects -->
-          <div class="col-12 px-5">
+          <div class="col-12 ">
 
           </div>
           <!-- !SECTION -->
           <!-- SECTION Contact me -->
-          <div class="col-12 px-5">
+          <div class="col-12 ">
 
           </div>
           <!-- !SECTION -->
