about me rough draft

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class=" border-bottom border-light border-3 text-center">
               <p class="heading-txt fw-bold mb-0 text-light " style="font-size: 4.5rem;">
-                Software
+                Full Stack Software
                 Developer
               </p>
               <p class=" fs-2 mb-0 text-light mb-3">Marcello Sharrai</p>
@@ -50,18 +50,26 @@
               </div>
               <div class="col-1 text-center">
                 <div class="text-light">
-                  <i class="mdi mdi-github fs-1"></i>
+                  <i class="mdi mdi-github fs-1 mdi-btn" role="button"></i>
                   <i class="mdi mdi-linkedin fs-1"></i>
                   <i class="mdi mdi-email fs-1"></i>
                 </div>
 
               </div>
-              <div class="col-5 rounded text-light p-1" style="background-color:  #dfd4fe3a;">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, saepe omnis. Soluta, perspiciatis
-                reiciendis similique id voluptatem rem eaque reprehenderit dolorum! Nesciunt mollitia pariatur esse
-                quaerat debitis, similique inventore natus repudiandae nihil ipsum dolorem hic exercitationem
-                dignissimos ratione tempore. Eligendi sapiente quibusdam magnam sit quaerat, suscipit accusamus repellat
-                tempora eveniet.
+              <div class="col-5 rounded text-light" style="background-color:  #dfd4fe3a;">
+                <div class="p-3">
+                  <p>
+                    Hello my name is Marcello Sharrai and this is my landing page. I'm a junior software developer. I
+                    have made various applications using a variety of different languages, tools, and frameworks. I am
+                    ambitious to grow my knowledge and improve my skills.
+                  </p>
+                  <p class="mb-0">
+                    I have always had an interest in computers since I was young and with that came the hardships behind
+                    learning about them. I believe that adversity makes us stronger. I enjoy problem solving and coming
+                    to
+                    a conclusion I can be proud of.
+                  </p>
+                </div>
               </div>
             </section>
           </div>
@@ -82,7 +90,7 @@
           <div class="col-11 ">
             <section class="row justify-content-center">
               <div class="col-12">
-                <p class="fs-1 heading-txt">Skills & Experience</p>
+                <p class=" heading-txt">Skills & Experience</p>
               </div>
               <div class="col-5 rounded" style="background-color: #c2c2c2;">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum totam architecto sequi porro corporis,
