--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
               <div class="col-5 rounded p-1" style="background-color: #dfd4fe3a;">
 
               </div>
-              <div class="col-1 text-center">
-                <div class="text-light">
-                  <i class="mdi mdi-github fs-1 mdi-btn" role="button"></i>
-                  <i class="mdi mdi-linkedin fs-1"></i>
-                  <i class="mdi mdi-email fs-1"></i>
+              <div class="col-1 text-center d-flex flex-column justify-content-around">
+                <div class=" text-light ">
+                  <i class="mdi mdi-github mdi-btn" role="button"></i>
+                  <i class="mdi mdi-linkedin mdi-btn"></i>
+                  <i class="mdi mdi-email mdi-btn"></i>
                 </div>
               </div>
               <div class="col-5 rounded text-light" style="background-color:  #dfd4fe3a;">
-                <div class="p-3">
+                <div class="p-3 fs-5">
                   <p>
                     Hello my name is Marcello Sharrai and this is my landing page. I'm a junior software developer. I
                     have made various applications using a variety of different languages, tools, and frameworks. I am
@@ -73,17 +73,27 @@
                 <p class=" heading-txt">Skills & Experience</p>
               </div>
               <div class="col-5 rounded" style="background-color: #c2c2c2;">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum totam architecto sequi porro corporis,
-                sit incidunt fugit necessitatibus id eum commodi quidem, molestias, unde voluptatem magni suscipit autem
-                placeat reprehenderit!
+                <p class="mb-0 fs-2">
+                  Frameworks & Languages
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum totam architecto sequi porro
+                  corporis,
+                  sit incidunt fugit necessitatibus id eum commodi quidem, molestias, unde voluptatem magni suscipit
+                  autem
+                  placeat reprehenderit!
+                </p>
               </div>
               <div class="col-1">
 
               </div>
               <div class="col-5 rounded" style="background-color: #c2c2c2;">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, unde accusantium quo dolorem
-                aspernatur ullam quidem earum excepturi eius rerum tempora, molestias expedita, non eaque. Quos
-                reiciendis tempora vitae qui?
+                <p class="mb-0 fs-2">Libraries & Tools</p>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, unde accusantium quo dolorem
+                  aspernatur ullam quidem earum excepturi eius rerum tempora, molestias expedita, non eaque. Quos
+                  reiciendis tempora vitae qui?
+                </p>
               </div>
             </section>
           </div>
